# CGL

./: CMakeLists.txt  main.c
include/glad/: glad.h
include/xx/: window.h
src/: glad.c
